cmake_minimum_required(VERSION 3.22)
project(ft_irc_cpp)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(server/channel)
include_directories(server/channel_repository)
include_directories(server/client)
include_directories(server/client_repository)
include_directories(server/command)
include_directories(server/exception)
include_directories(server/request)
include_directories(server/singleton_template)
include_directories(server/validator)
include_directories(server/wrapper)

add_executable(ft_irc_cpp
        server/channel/Channel.cpp
        server/channel/Channel.hpp
        server/channel_repository/ChannelRepository.cpp
        server/channel_repository/ChannelRepository.hpp
        server/client/Client.cpp
        server/client/Client.hpp
        server/client_repository/ClientRepository.cpp
        server/client_repository/ClientRepository.hpp
        server/command/CapCommand.cpp
        server/command/CapCommand.hpp
        server/command/Command.cpp
        server/command/Command.hpp
        server/command/InviteCommand.cpp
        server/command/InviteCommand.hpp
        server/command/JoinCommand.cpp
        server/command/JoinCommand.hpp
        server/command/KickCommand.cpp
        server/command/KickCommand.hpp
        server/command/ModeCommand.cpp
        server/command/ModeCommand.hpp
        server/command/NickCommand.cpp
        server/command/NickCommand.hpp
        server/command/PartCommand.cpp
        server/command/PartCommand.hpp
        server/command/PassCommand.cpp
        server/command/PassCommand.hpp
        server/command/PingCommand.cpp
        server/command/PingCommand.hpp
        server/command/PrivmsgCommand.cpp
        server/command/PrivmsgCommand.hpp
        server/command/QuitCommand.cpp
        server/command/QuitCommand.hpp
        server/command/TopicCommand.cpp
        server/command/TopicCommand.hpp
        server/command/UserCommand.cpp
        server/command/UserCommand.hpp
        server/exception/Exception.hpp
        server/request/CapRequest.cpp
        server/request/CapRequest.hpp
        server/request/InviteRequest.cpp
        server/request/InviteRequest.hpp
        server/request/JoinRequest.cpp
        server/request/JoinRequest.hpp
        server/request/KickRequest.cpp
        server/request/KickRequest.hpp
        server/request/ModeRequest.cpp
        server/request/ModeRequest.hpp
        server/request/NickRequest.cpp
        server/request/NickRequest.hpp
        server/request/PartRequest.cpp
        server/request/PartRequest.hpp
        server/request/PassRequest.cpp
        server/request/PassRequest.hpp
        server/request/PingRequest.cpp
        server/request/PingRequest.hpp
        server/request/PrivmsgRequest.cpp
        server/request/PrivmsgRequest.hpp
        server/request/QuitRequest.cpp
        server/request/QuitRequest.hpp
        server/request/Request.cpp
        server/request/Request.hpp
        server/request/TopicRequest.cpp
        server/request/TopicRequest.hpp
        server/request/UserRequest.cpp
        server/request/UserRequest.hpp
        server/singleton_template/SingletonTemplate.hpp
        server/validator/PassValidator.cpp
        server/validator/PassValidator.hpp
        server/validator/UserValidator.cpp
        server/validator/UserValidator.hpp
        server/validator/Validator.cpp
        server/validator/Validator.hpp
        server/wrapper/Wrapper.cpp
        server/wrapper/Wrapper.hpp
        AcceptHandler.cpp
        AcceptHandler.hpp
        def.h
        Demultiplexer.hpp
        EventHandler.hpp
        KqueueDemultiplexer.cpp
        KqueueDemultiplexer.hpp
        main.cpp
        Reactor.cpp
        Reactor.hpp
        shared_ptr.hpp
        Singleton.hpp
        StreamHandler.cpp
        StreamHandler.hpp
        test_shared_ptr.cpp)
